2013-05-20  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (permission [details]): Remove login from subject
	link, as users have IDs now.

2013-05-20  Matthew Mundell <matthew.mundell@greenbone.net>

	Add permission editing.

	* src/gsad.c (init_validator): Add permission edit commands and rules.
	(exec_omp_get): Add permission edit commands.

	* src/gsad_omp.c (edit_permission, edit_permission_omp): New functions.
	(CHECK): New macro.
	(save_permission_omp): New function.

	* src/gsad_omp.h: Add headers accordingly.

	* src/html/gsad.xsl (modify_permission_response): New template.
	(html-gsa-logo): Match permission edit indicator icons.

	* src/html/omp.xsl (permission): Enable edit icon.
	(modify_permission_response, html-edit-permission-form)
	(edit_permission): New template.

2013-05-20  Michael Wiegand <michael.wiegand@greenbone.net>

	Make sure gsad is properly linked to libgcrypt.

	* CMakeLists.txt: Add libgcrypt detection and retrieve linker and
	compiler flags using libgcrypt-config.

	* src/CMakeLists.txt: Use detected flags when compiling and linking
	the gsad binary.

2013-05-20  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/omp.xsl (host): Merge threat and cvss columns as severity
	column. Use severity bar for highest severity value in prognosis column.

2013-05-19  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/omp.xsl (report-section-pager): New template.
	(report [hosts], report [ports], report [vulns], report [os])
	(report [closed_cves]): Refactor code to use new template.

2013-05-18  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/os.xml: Add entries for Greenbone OS versions 2.0, 2.1 and
	2.2.

2013-05-17  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/omp.xsl (gsa:host-has-unknown-os): New function.
	(report [os]): Add "Unknown" Operating System to regroup hosts with no
	OS. Adjust table layout and make necessary filtered and total counting
	changes. Refactor code.